Added support for header and footer inside other sections, according to HTML API Mappings 1.0.

One of the criteria on html5accessibility.com.
BUG=628533
R=dmazzoni@chromium.org
TESTED=browser tests, manually with tests provided by html5accessibility.com

Review-Url: https://codereview.chromium.org/2234913002
Cr-Commit-Position: refs/heads/master@{#411452}

Former-commit-id: 47b9be5bfce50b7df582dade75f9102fb9599bbb